--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
   min-height: 100vh;
+background-color: #002949;
+}
+
+.App {
+
+font-family: 'Russo One', sans-serif;
+text-align: center;
+}
+
+.CharactersList {
+
+  margin: 0 10vw;
+  padding: 4rem 0;
+  display: flex;
+  gap: 4rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.CharacterCard {
+background-color: rgb(255, 255, 255);
+border-radius: 16px;
+padding: 1rem;
+  width: 24rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.CharacterCard img {
+object-fit:contain;
+height: 20rem;
+padding-bottom: 2rem
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3 {
+  font-size: 2rem;
+  color: #127ac9;
+}
+
+ button {
+  padding: 12px;
+  background-color: #127ac988;
+  color: rgb(240, 248, 255);
+  font-family: 'Russo One', sans-serif;
+  font-size: 1.2rem;
+  border-radius: 24px;
+  border: none;
+  transition: all 0.2s ease-in-out;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: #127ac9;
+}
+
+.remove-btn {
+  background-color: rgba(255, 101, 101, 0.62);
+  margin-top: 10px;
+}
+
+.remove-btn:hover {
+  background-color: rgb(255, 101, 101);
+}
+
+.logo {
+  margin: 2rem 0;
+  width: 50vw;
 }
