--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,15 @@ button:hover {
   margin: 2rem 0;
   width: 50vw;
 }
+
+#new-character-form {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.characters-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
