--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,31 @@ button:hover {
   flex-direction: column;
   align-items: center;
 }
+
+input {
+  padding: 12px;
+  background-color: #127ac988;
+  color: rgb(240, 248, 255);
+  font-family: 'Russo One', sans-serif;
+  font-size: 1.2rem;
+  border-radius: 24px;
+  border: none;
+}
+
+#new-form {
+width: 50%;
+margin: 0 auto;
+display: flex;
+flex-direction: column;
+gap: 1rem;
+}
+
+select {
+  padding: 12px;
+  background-color: #127ac988;
+  color: rgb(240, 248, 255);
+  font-family: 'Russo One', sans-serif;
+  font-size: 1.2rem;
+  border-radius: 24px;
+  border: none;
+}
