--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ background-color: #002949;
 }
 
 .App {
-
+  color: rgb(240, 248, 255);
 font-family: 'Russo One', sans-serif;
 text-align: center;
 }
@@ -67,7 +67,7 @@ button:hover {
 
 .logo {
   margin: 2rem 0;
-  width: 50vw;
+  width: 60vw;
 }
 
 #new-character-form {
@@ -93,11 +93,18 @@ input {
 }
 
 #new-form {
+
 width: 50%;
 margin: 0 auto;
+margin-top: 1rem;
 display: flex;
 flex-direction: column;
 gap: 1rem;
+}
+
+input::placeholder { 
+  color: rgb(240, 248, 255);
+  opacity: 0.5; 
 }
 
 select {
@@ -108,4 +115,22 @@ select {
   font-size: 1.2rem;
   border-radius: 24px;
   border: none;
+}
+
+.Filter {
+
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+
+}
+
+label {
+  font-size: 1.6rem;
+}
+
+.Filter input {
+  width: 70%;
 }
